manifest/media/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - radarr.defconsandbox.com
    secretName: radarr-media
  rules:
  - host: radarr.defconsandbox.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:  
            name: radarr-service
            port:
              number: 80
